--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -23,9 +23,26 @@
     }
   }
 
+  button {
+    margin-left: auto;
+    font-size: 20px;
+  }
+
   .total {
     margin-top: 30px;
     margin-left: auto;
     font-size: 36px;
+  }
+
+  .test-warning {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 22px;
+    color: red;
+
+    p {
+      margin-bottom: 0;
+      margin-top: 0;
+    }
   }
 }
